--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,10 @@
 apply plugin: 'com.android.application'
 
 android {
+
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
     buildToolsVersion rootProject.ext.android["buildToolsVersion"]
+    useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId rootProject.ext.android["applicationId"]
