--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     api rootProject.ext.dependencies["appcompat"]
-//    api rootProject.ext.dependencies["bmobsdk"]
+    api rootProject.ext.dependencies["bmobsdk"]
     api rootProject.ext.dependencies["rxjava2"]
     api rootProject.ext.dependencies["rxandroid2"]
     api rootProject.ext.dependencies["okio"]
@@ -50,7 +50,7 @@ dependencies {
     api rootProject.ext.dependencies["litepal"]
     api rootProject.ext.dependencies["eventbus"]
     api rootProject.ext.dependencies["tablayout"]
-//    api rootProject.ext.dependencies["photoview"]
+    api rootProject.ext.dependencies["photoview"]
     api rootProject.ext.dependencies["3dmap"]
     api rootProject.ext.dependencies["location"]
     api rootProject.ext.dependencies["search"]
